# base-utils-backend-lib

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  docker-compose.yml  makefile  pyproject.toml  pytest.ini
scripts/: build.sh  coverage.sh  setup.sh  tests.sh
src/gdcbeutils/: __init__.py
tests/: conftest.py
tests/constants/: database.py
tests/constants/scripts/mongo/: database.py
tests/constants/scripts/mongo/seed/: test.json
tests/constants/scripts/sql/seed/: seed_test.sql
tests/constants/scripts/sql/setup/: setup1.sql  setup2.sql  setup3.sql
tests/database/: test_mongodb.py  test_mysqldb.py
tests/models/pagination/: test_paginated.py  test_paginated_results.py
tests/serialization/: test_date.py
